# study-for-interview

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  test_base_ask.py
apps/api/: main.py
apps/api/core/: config.py  dependencies.py
apps/api/db/: pg_client.py  redis_client.py
apps/api/models/: __init__.py  resume_model.py
apps/api/modules/chat/: controller.py  schema.py  service.py
apps/api/modules/pdf/: controller.py  schema.py  service.py
apps/api/repositories/: resume_repository.py
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/: App.vue
docs/superpowers/specs/: 2026-04-07-docker-config-design.md
